crates/vespertide-query/src/snapshots/vespertide_query__builder__tests__two_not_null_add_columns_with_inline_index_no_duplicate@two_not_null_inline_index_mysql.snap
---
source: crates/vespertide-query/src/builder/mod.rs
assertion_line: 878
expression: sql
---
-- Action 0: AddColumn { table: "article", column: ColumnDef { name: "category_pinned", type: Simple(Boolean), nullable: false, default: Some(Bool(false)), comment: None, primary_key: None, unique: None, index: Some(Bool(true)), foreign_key: None }, fill_with: None }
ALTER TABLE `article` ADD COLUMN `category_pinned` bool NOT NULL DEFAULT (false)

-- Action 1: AddColumn { table: "article", column: ColumnDef { name: "main_pinned", type: Simple(Boolean), nullable: false, default: Some(Bool(false)), comment: None, primary_key: None, unique: None, index: Some(Bool(true)), foreign_key: None }, fill_with: None }
ALTER TABLE `article` ADD COLUMN `main_pinned` bool NOT NULL DEFAULT (false)

-- Action 2: AddConstraint { table: "article", constraint: Index { name: None, columns: ["main_pinned"] } }
CREATE INDEX `ix_article__main_pinned` ON `article` (`main_pinned`)

-- Action 3: AddConstraint { table: "article", constraint: Index { name: None, columns: ["category_pinned"] } }
CREATE INDEX `ix_article__category_pinned` ON `article` (`category_pinned`)
